<resources>
    <string name="app_name">SimpleDaily</string>

    <!--    <string name="admob_app_id"></string>-->
    <!--    <string name="admob_native_id"></string>-->
    <!--    <string name="admob_front_id"></string>-->
    <!--    <string name="admob_banner_id"></string>-->

    <string name="admob_app_test_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_native_test_id">ca-app-pub-3940256099942544/2247696110</string>
    <!--    <string name="admob_front_test_id">ca-app-pub-7669498576619816/8560478693</string>-->
    <!--    <string name="admob_banner_test_id">ca-app-pub-3940256099942544/6300978111</string>-->

    <string name="signal_url">https://api.signal.bz</string>
    <string name="weather_url">https://search.naver.com/search.naver?where=nexearch&amp;sm=top_hty&amp;fbm=1&amp;ie=utf8&amp;query=</string>
    <string name="exchange_url">https://search.naver.com/search.naver?sm=tab_hty.top&amp;where=nexearch&amp;query=%ED%99%98%EC%9C%A8&amp;oquery=%ED%99%98%EC%9C%A8&amp;tqi=hqwrplprvhGssOgKA3ossssstUV-161138</string>
    <string name="weather_img_url">https://ssl.pstatic.net/sstatic/keypage/outside/scui/weather_new_new/img/weather_svg/</string>
    <string name="ADDRESS_URL">https://grpc-proxy-server-mkvo6j4wsq-du.a.run.app</string>

    <string name="now_weather">현재 날씨</string>
    <string name="hourly_weather">시간별 날씨</string>
    <string name="hourly_rain">시간별 강수</string>
    <string name="hourly_wind">시간별 바람</string>
    <string name="hourly_hum">시간별 습도</string>
    <string name="hourly_more_txt">시간별 강수  |  바람  |  습도 확인하기</string>
    <string name="week_more_txt">주간예보 확인하기</string>
    <string name="hourly">hourly</string>
    <string name="week">week</string>
    <string name="news">news</string>
    <string name="memo">memo</string>
    <string name="schedule">schedule</string>
    <string name="weather">weather</string>

    <string name="realtime_top10">실시간 인기 검색어</string>
    <string name="realtime_popular_news">인기 뉴스</string>
    <string name="press_news">언론사별 가장 많이 본 뉴스</string>

    <string name="currently_memo">최근 등록한 메모</string>
    <string name="no_insert_memo">등록된 메모가 없습니다.</string>

    <string name="currently_schedule">오늘 일정</string>
    <string name="no_insert_schedule">오늘 일정이 없습니다.</string>

    <string name="today_exchange">환율</string>

    <string name="loading_text">데이터를 불러오는 중입니다.</string>

    <string name="no_weather">날씨 정보를 확인하시려면 `설정->지역 설정하기`를 통해 지역을 선택해 주세요</string>

    <string name="exit">종료</string>
    <string name="result">확인</string>
    <string name="cancel">취소</string>
    <string name="notice">알림</string>
    <string name="exit_question">앱을 종료하시겠습니까?</string>
    <string name="success_location">지역 설정을 완료했습니다.</string>
    <string name="reset">앱 내의 모든 데이터를 삭제합니다.\n 정말로 초기화하시겠습니까?</string>

    <string name="memo_update">수정</string>
    <string name="memo_delete">삭제</string>
    <string name="memo_write">작성</string>
    <string name="memo_copy">복사</string>
    <string name="memo_back">이전</string>
    <string name="memo_save">저장</string>
    <string name="btn_reset">초기화</string>

    <string name="am">오전</string>
    <string name="pm">오후</string>

    <string name="update_title">최신 버전 업데이트</string>
    <string name="update_contents">최신 버전 앱으로 업데이트를 위해 스토어로 이동합니다.</string>


    <string name="toast_save">저장하였습니다.</string>
    <string name="toast_delete">삭제하였습니다.</string>
    <string name="toast_update">수정하였습니다.</string>
    <string name="toast_reset">초기화하였습니다.</string>
    <string name="toast_copy">복사하였습니다.</string>

    <string name="delete_question">메모를 삭제하시겠습니까?</string>
    <string name="back_question">저장되지 않은 메모가 있습니다.\n뒤로 이동하시겠습니까?</string>
    <string name="save_question">제목 및 본문 내용이 공백입니다.</string>

    <string name="internet_error">서버에 연결할 수 없습니다. 잠시 후 다시 시도해 주세요.</string>

    <string name="all_memo">메모 모두 보기</string>
    <string name="all_schedule">달력 이동</string>
    <string name="no_location_setting">지역 설정하기</string>

    <string name="store_uri">market://details?id=com.yun.simpledaily</string>

    <string name="internet_title">네트워크 연결</string>
    <string name="internet_contents">서버 연결에 실패했습니다. 잠시 후 다시 시도해 주세요.</string>


</resources>