<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.yun.simpledaily.data.Constant" />

        <import type="android.view.View" />

        <variable
            name="memo"
            type="com.yun.simpledaily.ui.memo.MemoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_setting_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            app:cardElevation="5dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.05" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.95" />

                <TextView
                    android:id="@+id/tv_setting_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:includeFontPadding="false"
                    android:shadowColor="#33000000"
                    android:shadowDx="3.0"
                    android:shadowDy="3.0"
                    android:shadowRadius="1.0"
                    android:text="@{Constant.INSTANCE._MEMO}"
                    android:textColor="@color/color_FBA53B"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/gl_start"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img_add_memo"
                    android:layout_width="23dp"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_write_icon"
                    android:visibility="@{memo.screen == Constant.INSTANCE.MEMO_LIST_SCREEN ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/gl_end"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_update"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="15dp"
                    android:clickable="true"
                    android:gravity="center"
                    android:includeFontPadding="true"
                    android:text="@string/memo_update"
                    android:textColor="@color/color_FBA53B"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="@{memo.screen == Constant.INSTANCE.MEMO_DETAIL_SCREEN &amp;&amp; !memo.updateMode ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_delete"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="15dp"
                    android:clickable="true"
                    android:gravity="center"
                    android:includeFontPadding="true"
                    android:text="@string/memo_delete"
                    android:textColor="@color/color_FBA53B"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="@{memo.screen == Constant.INSTANCE.MEMO_DETAIL_SCREEN ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_back"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_save"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="15dp"
                    android:clickable="true"
                    android:gravity="center"
                    android:includeFontPadding="true"
                    android:text="@string/memo_save"
                    android:textColor="@color/color_FBA53B"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="@{memo.screen == Constant.INSTANCE.MEMO_WRITE_SCREEN || memo.updateMode ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_delete"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:clickable="true"
                    android:gravity="center"
                    android:includeFontPadding="true"
                    android:text="@string/memo_back"
                    android:textColor="@color/color_FBA53B"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="@{memo.screen == Constant.INSTANCE.MEMO_LIST_SCREEN ? View.GONE : View.VISIBLE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/gl_end"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_memo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_setting_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>