<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.yun.simpledaily.data.Constant" />

        <variable
            name="hourlyWeather"
            type="com.yun.simpledaily.ui.hourly.HourlyWeatherViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_hourly_weather_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            app:cardElevation="5dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.05" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.95" />

                <TextView
                    android:id="@+id/tv_hourly_weather_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:includeFontPadding="false"
                    android:shadowColor="#33000000"
                    android:shadowDx="3.0"
                    android:shadowDy="3.0"
                    android:shadowRadius="1.0"
                    android:text="@{hourlyWeather.title}"
                    android:textColor="@color/color_FBA53B"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/gl_start"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_hourly_weather_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/_gl_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.05" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/_gl_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.95" />


                <TextView
                    android:id="@+id/tv_hourly_rain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:shadowColor="#33000000"
                    android:shadowDx="3.0"
                    android:shadowDy="3.0"
                    android:shadowRadius="1.0"
                    android:text="@string/hourly_rain"
                    android:textColor="@color/color_FBA53B"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/_gl_start"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cv_hourly_rain"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    app:layout_constraintEnd_toEndOf="@id/_gl_end"
                    app:layout_constraintStart_toStartOf="@id/_gl_start"
                    app:layout_constraintTop_toBottomOf="@id/tv_hourly_rain">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_hourly_rain"
                        replaceAll="@{hourlyWeather.hourlyRainList}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal"
                        android:overScrollMode="never"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_hourly_rain" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/tv_hourly_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:shadowColor="#33000000"
                    android:shadowDx="3.0"
                    android:shadowDy="3.0"
                    android:shadowRadius="1.0"
                    android:text="@string/hourly_wind"
                    android:textColor="@color/color_FBA53B"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/_gl_start"
                    app:layout_constraintTop_toBottomOf="@id/cv_hourly_rain" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cv_hourly_wind"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp"
                    app:layout_constraintEnd_toEndOf="@id/_gl_end"
                    app:layout_constraintStart_toStartOf="@id/_gl_start"
                    app:layout_constraintTop_toBottomOf="@id/tv_hourly_wind">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_hourly_wind"
                        replaceAll="@{hourlyWeather.hourlyWindList}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal"
                        android:overScrollMode="never"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_hourly_rain" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/tv_hourly_hum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:shadowColor="#33000000"
                    android:shadowDx="3.0"
                    android:shadowDy="3.0"
                    android:shadowRadius="1.0"
                    android:text="@string/hourly_hum"
                    android:textColor="@color/color_FBA53B"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/_gl_start"
                    app:layout_constraintTop_toBottomOf="@id/cv_hourly_wind" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cv_hourly_hum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp"
                    app:layout_constraintEnd_toEndOf="@id/_gl_end"
                    app:layout_constraintStart_toStartOf="@id/_gl_start"
                    app:layout_constraintTop_toBottomOf="@id/tv_hourly_hum">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_hourly_hum"
                        replaceAll="@{hourlyWeather.hourlyHumList}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal"
                        android:overScrollMode="never"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_hourly_rain" />
                </com.google.android.material.card.MaterialCardView>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    app:layout_constraintTop_toBottomOf="@id/cv_hourly_hum" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>